--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
     compile 'commons-io:commons-io:1.3.2'
-    compile 'com.wnafee:vector-compat:1.0.5'
-    implementation files('libs/svg-android.jar')
+//    compile 'com.wnafee:vector-compat:1.0.5
 }
