Add Search functionality and db queries update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,9 +44,19 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity
-            android:name=".GalleryActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"></activity>
+            android:name=".CreateInvoiceActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:exported="false"
+            android:theme="@style/Base.Theme.AppCompat" />
+        <activity android:name=".TestActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
