--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
     compile 'commons-io:commons-io:1.3.2'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
 //    compile 'com.wnafee:vector-compat:1.0.5
 }
