--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.test.testapplication"
         minSdkVersion 19
@@ -34,5 +37,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
     compile 'commons-io:commons-io:1.3.2'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile "org.jetbrains.anko:anko-common:0.10.1"
 //    compile 'com.wnafee:vector-compat:1.0.5
 }
+repositories {
+    mavenCentral()
+}
+
+apply plugin: 'kotlin-android-extensions'
