--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,21 +24,24 @@ android {
 }
 
 dependencies {
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.0.1'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:26.0.1'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-vector-drawable:26.0.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
-    compile 'commons-io:commons-io:1.3.2'
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile "org.jetbrains.anko:anko-common:0.10.1"
+    implementation 'commons-io:commons-io:1.3.2'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.anko:anko-common:0.10.1"
+
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 //    compile 'com.wnafee:vector-compat:1.0.5
 }
 repositories {
